@@ -37,6 +37,37 @@ class Command():
         self.packagedir = opts.get('default', 'packagedir')
         self.cmdfile = os.path.join(self.packagedir, commandfile)
 
+    def fetch_dsc(self):
+        parms = {}
+        conf = {'mirror': ('[^#]?MIRRORSITE="?(.*[^"])"?\n', 'MIRRORSITE'),
+                'components': ('[^#]?COMPONENTS="?(.*[^"])"?\n', 'COMPONENTS')}
+        try:
+            with open(self.originconf, 'r') as fd:
+                data = fd.read()
+        except IOError:
+            self.w(_('Unable to open %s') % originconf)
+            return
+        for elem in conf.keys():
+            try:
+                parms[elem] = findall(conf[elem][0], data)[0]
+            except IndexError:
+                self.data = None
+                self.w(_('Please set %(parm)s in %s(conf)s') % \
+                       {'parm': conf[elem][0], 'conf': self.originconf})
+                return
+        for component in parms['components'].split():
+            request = Request('%s/pool/%s/%s/%s/%s' %
+                              (parms['mirror'], component,
+                               findall('^lib\S|^\S', self.package)[0],
+                                       self.package, self.dscname))
+            try:
+                self.data = urlopen(request).read()
+                break
+            except (HTTPError, URLError):
+                self.data = None
+                self.w(_('Unable to fetch %s') % \
+                       '_'.join((self.package, self.version)))
+
     def process_command(self):
         gpg = GPG(self.opts, self.cmdfile)
         if gpg.gpg:
@@ -49,10 +80,47 @@ class Command():
         os.remove(self.cmdfile)
         cmd_rm = findall('\s?rm\s+(.*)', cmd)
         cmd_rebuild = findall('\s?rebuild\s+(\S+)_(\S+) (\S+) ?(\S*)', cmd)
+        cmd_porter = findall('\s?porter\s+(\S+)_(\S+) (\S+) (.*)', cmd)
         if cmd_rm:
             self.process_rm(cmd_rm)
+        if cmd_porter:
+            self.process_porter(cmd_porter)
         if cmd_rebuild:
             self.process_rebuild(cmd_rebuild)
+
+    def process_porter(self, packages):
+        for package in packages:
+            self.package = package[0]
+            self.version = package[1]
+            self.dscname = '%s_%s.dsc' % (self.package, self.version)
+            self.target = package[2]
+            self.debopts = package[3]
+            self.originconf = os.path.join(self.configdir, self.target)
+            self.fetch_dsc()
+            if self.data:
+                dsc = os.path.join(self.packagedir, self.dscname)
+                with open(dsc, 'w') as fd:
+                    fd.write(self.data)
+                b = Build(self.opts, self.log, dsc=dsc,
+                          distribution=self.target, debopts=self.debopts)
+                self.pool.add_task(b.build)
+
+    def process_rebuild(self, packages):
+        for package in packages:
+            self.package = package[0]
+            self.version = package[1]
+            self.dscname = '%s_%s.dsc' % (self.package, self.version)
+            self.target = package[2]
+            self.origin = package[3] if package[3] else package[2]
+            self.originconf = os.path.join(self.configdir, self.origin)
+            self.fetch_dsc()
+            if self.data:
+                dsc = os.path.join(self.packagedir, self.dscname)
+                with open(dsc, 'w') as fd:
+                    fd.write(self.data)
+                b = Build(self.opts, self.log, dsc=dsc,
+                          distribution=self.target, origin=self.origin)
+                self.pool.add_task(b.build)
 
     def process_rm(self, filesets):
         for files in filesets:
@@ -60,46 +128,3 @@ class Command():
                 pattern = os.path.basename(pattern)
                 for absfile in glob(os.path.join(self.packagedir, pattern)):
                     os.remove(absfile)
-
-    def process_rebuild(self, packages):
-        parms = {}
-        conf = {'mirror': ('[^#]?MIRRORSITE="?(.*[^"])"?\n', 'MIRRORSITE'),
-                'components': ('[^#]?COMPONENTS="?(.*[^"])"?\n', 'COMPONENTS')}
-        for package in packages:
-            dscname = '%s_%s.dsc' % (package[0], package[1])
-            target = package[2]
-            origin = package[3] if package[3] else package[2]
-            originconf = os.path.join(self.configdir, origin)
-            try:
-                with open(originconf, 'r') as fd:
-                    data = fd.read()
-            except IOError:
-                self.w(_('Unable to open %s') % originconf)
-                return
-            for elem in conf.keys():
-                try:
-                    parms[elem] = findall(conf[elem][0], data)[0]
-                except IndexError:
-                    self.w(_('Please set %(parm)s in %s(conf)s') % \
-                           {'parm': conf[elem][0], 'conf': originconf})
-                    return
-            for component in parms['components'].split():
-                request = Request('%s/pool/%s/%s/%s/%s' %
-                                  (parms['mirror'], component,
-                                   findall('^lib\S|^\S', package[0])[0],
-                                           package[0], dscname))
-                try:
-                    data = urlopen(request).read()
-                    break
-                except (HTTPError, URLError):
-                    data = None
-            if data:
-                dsc = os.path.join(self.packagedir, dscname)
-                with open(dsc, 'w') as fd:
-                    fd.write(data)
-                b = Build(self.opts, self.log, dsc=dsc,
-                          distribution=target, origin=origin)
-                self.pool.add_task(b.build)
-            else:
-                self.w(_('Unable to fetch %s') % \
-                       '_'.join((package[0], package[1])))
